--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 export interface Props {
 	title: string;
 }
@@ -14,22 +16,30 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
+		<meta name="description" content="The Batak language is one of the most well-known ethnic languages in North Sumatera, Indonesia. Specifically, the Batak tribe.">
+
+		<!-- og meta -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Bataknese Application" />
+		<meta property="og:description" content="The Batak language is one of the most well-known ethnic languages in North Sumatera, Indonesia. Specifically, the Batak tribe." />
+		<meta property="og:url" content="https://batakneseapp.vercel.app/" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/ekosutrisno/bataknese-dictionary/main/public/cc_app.png" />
+		<meta property="og:image:alt" content="Bataknese App Preview" />
+		<meta property="og:image:width" content="1246" />
+		<meta property="og:image:height" content="688" />
+
+		<!-- twitter meta -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="https://batakneseapp.vercel.app/" />
+		<meta name="twitter:creator" content="Bataknese App Team" />
+		<meta name="twitter:title" content="Bataknese Application" />
+		<meta name="twitter:description" content="The Batak language is one of the most well-known ethnic languages in North Sumatera, Indonesia. Specifically, the Batak tribe." />
+		<meta name="twitter:image" content="https://raw.githubusercontent.com/ekosutrisno/bataknese-dictionary/main/public/cc_app.png" />
+		<meta name="twitter:image:alt" content="Bataknese App Preview" />
+
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
