--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,19 +23,19 @@ const { title } = Astro.props;
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Bataknese Application" />
 		<meta property="og:description" content="The Batak language is one of the most well-known ethnic languages in North Sumatera, Indonesia. Specifically, the Batak tribe." />
-		<meta property="og:url" content="https://batakneseapp.vercel.app/" />
-		<meta property="og:image" content="https://raw.githubusercontent.com/ekosutrisno/bataknese-dictionary/main/public/cc_app.png" />
+		<meta property="og:url" content="https://batakneseapps.vercel.app/" />
+		<meta property="og:image" content="https://res.cloudinary.com/ekosutrisno/image/upload/v1678852281/briix/cc_app_ayxtn1.png" />
 		<meta property="og:image:alt" content="Bataknese App Preview" />
 		<meta property="og:image:width" content="1246" />
 		<meta property="og:image:height" content="688" />
 
 		<!-- twitter meta -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="https://batakneseapp.vercel.app/" />
+		<meta name="twitter:site" content="https://batakneseapps.vercel.app/" />
 		<meta name="twitter:creator" content="Bataknese App Team" />
 		<meta name="twitter:title" content="Bataknese Application" />
 		<meta name="twitter:description" content="The Batak language is one of the most well-known ethnic languages in North Sumatera, Indonesia. Specifically, the Batak tribe." />
-		<meta name="twitter:image" content="https://raw.githubusercontent.com/ekosutrisno/bataknese-dictionary/main/public/cc_app.png" />
+		<meta name="twitter:image" content="https://res.cloudinary.com/ekosutrisno/image/upload/v1678852281/briix/cc_app_ayxtn1.png" />
 		<meta name="twitter:image:alt" content="Bataknese App Preview" />
 
 	</head>
